[project]
name = "nutopt"
description = "Linear programming library for nutrition optimization."
readme = "README.md"
authors = [
    { name = "Abel Lawrence Peirson", email = "59vpla@gmail.com" }
]
license = { text = "MIT License" }
dependencies = [
    "numpy",
    "cvxpy",
    "pandas",
    "matplotlib",
]
dynamic = ["version"]

[project.urls]
homepage = "https://www.github.com/alpv95/Nut-Opt"

[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]

[tool.setuptools_scm]
